contact details updated

--- a/index.html
+++ b/index.html
@@ -23,18 +23,15 @@
       <div>
         <p class="d-inline m-r-2">
           <i class='bx bxs-envelope'></i>
-          debra.holt@example.com
+          shahzaibtariq559@gmail.com
         </p>
         <p class="d-inline m-r-2">
           <i class='bx bxs-phone-call'></i>
-          (219) 555-0114
+          +92 (305) 626 6559
         </p>
       </div>
       <div class="col-auto tn-social-icons">
-        <a href=""><i class='bx bxl-facebook' ></i></a>
-        <a href=""><i class='bx bxl-twitter' ></i></a>
-        <a href=""><i class='bx bxl-instagram' ></i></a>
-        <a href=""><i class='bx bxl-pinterest' ></i></a>
+        <a href="https://www.linkedin.com/in/shahzaibtariq559/"><i class='bx bxl-linkedin' ></i></a>
       </div>
     </div>
   </div>
@@ -134,7 +131,7 @@
           </div>
         </div>
         <div class="col-lg-5">
-          <img style="width: 451px;" src="img/about.png" alt="">
+          <img style="max-width: 300px;" src="img/about.png" alt="">
         </div>
       </div>  
     </div>
@@ -293,10 +290,7 @@
               <img src="img/team_1.jpg" alt="">
               <div class="overlay"></div>
               <div class="col-auto tn-social-icons">
-                <a href=""><i class='bx bxl-facebook' ></i></a>
-                <a href=""><i class='bx bxl-twitter' ></i></a>
-                <a href=""><i class='bx bxl-instagram' ></i></a>
-                <a href=""><i class='bx bxl-pinterest' ></i></a>
+                <a href="https://www.linkedin.com/in/shahzaibtariq559/"><i class='bx bxl-linkedin' ></i></a>
               </div>
             </div>
             <div class="content">
@@ -312,10 +306,7 @@
               <img src="img/team_2.jpg" alt="">
               <div class="overlay"></div>
               <div class="col-auto tn-social-icons">
-                <a href=""><i class='bx bxl-facebook' ></i></a>
-                <a href=""><i class='bx bxl-twitter' ></i></a>
-                <a href=""><i class='bx bxl-instagram' ></i></a>
-                <a href=""><i class='bx bxl-pinterest' ></i></a>
+                <a href="https://www.linkedin.com/in/shahzaibtariq559/"><i class='bx bxl-linkedin' ></i></a>
               </div>
             </div>
             <div class="content">
@@ -331,10 +322,7 @@
               <img src="img/team_3.jpg" alt="">
               <div class="overlay"></div>
               <div class="col-auto tn-social-icons">
-                <a href=""><i class='bx bxl-facebook' ></i></a>
-                <a href=""><i class='bx bxl-twitter' ></i></a>
-                <a href=""><i class='bx bxl-instagram' ></i></a>
-                <a href=""><i class='bx bxl-pinterest' ></i></a>
+                <a href="https://www.linkedin.com/in/shahzaibtariq559/"><i class='bx bxl-linkedin' ></i></a>
               </div>
             </div>
             <div class="content">
@@ -441,16 +429,13 @@
             <h1 class="text-light">What we DO</h1>
             <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
             <div class="col-auto footer-icons my-5">
-              <a href=""><i class='bx bxl-facebook' ></i></a>
-              <a href=""><i class='bx bxl-twitter' ></i></a>
-              <a href=""><i class='bx bxl-instagram' ></i></a>
-              <a href=""><i class='bx bxl-pinterest' ></i></a>
+              <a href="https://www.linkedin.com/in/shahzaibtariq559/"><i class='bx bxl-linkedin' ></i></a>
             </div>
           </div>
         </div>
       </div>
       <div style="color:white; border-top: 1px solid white; padding-top: 1rem;" class="footer-bottom text-center">
-        <p class="mb-0">Copyright@2020. Developed by <a style="text-decoration: none; color: white;" href="shahzaib-frontend-developer.netlify.app">SHAHZAIB</a> </p>
+        <p class="mb-0">Copyright@2020. Developed by <a style="text-decoration: none; color: red;" href="http://shahzaib.choicetechai.com/">SHAHZAIB</a> </p>
     </div>
     </section>
   </footer>
